--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^11.6.0",
     "lucide-react": "^0.486.0",
     "next": "15.2.4",
+    "next-pwa": "^5.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.1.0",
